--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '1'
+version: '3.9'
 
 services:
   spring-container:
@@ -14,8 +14,9 @@ services:
       - "8080:8080"
     environment:
     - spring.datasource.url=jdbc:mysql://db:3306/cardapi?allowPublicKeyRetrieval=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
-#    - spring.datasource.username=root
-#    - spring.datasource.password=root
+    - spring.datasource.username=root
+    - spring.datasource.password=root
+    - spring.datasource.driver-class-name:com.mysql.cj.jdbc.Driver
   db:
     image: mysql:latest
     networks:
