fix identation of application.dist.yaml

--- a/src/main/resources/application.dist.yaml
+++ b/src/main/resources/application.dist.yaml
@@ -1,5 +1,5 @@
 
-#please rename to application.yaml and add API_KEY from email or your own API_KEY for https://api.bintable.com/v1/
+#please rename this file to application.yaml and add API_KEY from email attachment or your own API_KEY for https://api.bintable.com/v1/
 
 spring:
   profiles:
@@ -11,23 +11,23 @@ spring:
     baselineOnMigrate: false
   jpa:
     # uncomment to create initial migration for flyway and disable spring.flyway.enabled with false value
-    #    properties:
-    #      javax:
-    #        persistence:
-    #          schema-generation:
-    #            create-source: metadata
-    #
-    #            scripts:
-    #              action: create
-    #              create-target: src/main/resources/db/whole_database.sql
+#      properties:
+#        javax:
+#          persistence:
+#            schema-generation:
+#              create-source: metadata
+#
+#              scripts:
+#                action: create
+#                create-target: src/main/resources/db/whole_database.sql
 
     open-in-view: false
     hibernate:
       ddl-auto: validate
       naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
   datasource:
-    username: root # of course this shouldn't be part of the commit in production
-    password: root # of course this shouldn't be part of the commit in production
+    username: root # of course this shouldn't be part of a production commit
+    password: root # of course this shouldn't be part of a production commit
     url: jdbc:mysql://localhost:3306/cardapi?allowPublicKeyRetrieval=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8 #local
 
 apiKey: API_KEY
